# GLTFKit2

./: .gitignore  CMakeLists.txt  build_ios.sh  build_osx.sh
CMake/ios-cmake/: LICENSE
Frameworks/CGLTF/: CMakeLists.txt
